--- a/nasomail_server/Cargo.toml
+++ b/nasomail_server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 axum = { version = "0.8.8", features = ["http2"] }
+reqwest = "0.13.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 sqlx = { version = "0.8.6", features = ["sqlite-unbundled", "runtime-tokio", "tls-native-tls"] }
@@ -13,3 +14,4 @@ thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
+uuid = { version = "1.20.0", features = ["v4"] }
