--- a/nasomail_server/Cargo.toml
+++ b/nasomail_server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nasomail-server"
+name = "nasomail_server"
 version = "0.1.0"
 edition = "2024"
 
@@ -9,7 +9,7 @@ axum = { version = "0.8.8", features = ["http2"] }
 reqwest = "0.13.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-sqlx = { version = "0.8.6", features = ["sqlite-unbundled", "runtime-tokio", "tls-native-tls"] }
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1.44"
