--- a/nasomail_server/Cargo.toml
+++ b/nasomail_server/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "nasomail_server"
 version = "0.1.0"
+authors = ["Anatnaso"]
 edition = "2024"
 
 [dependencies]
+nasomail_shared = { path = "../nasomail_shared" }
 anyhow = "1.0.100"
 axum = { version = "0.8.8", features = ["http2"] }
 reqwest = "0.13.1"
