--- a/nasomail_client/Cargo.toml
+++ b/nasomail_client/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2024"
 nasomail_shared = { path = "../nasomail_shared" }
 
 dioxus = { version = "0.7.1", features = [] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 
 [features]
 default = ["desktop"]
