--- a/nasomail_server/Cargo.toml
+++ b/nasomail_server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 
 [dependencies]
 nasomail_shared = { path = "../nasomail_shared" }
+ctxguard = { version = "0.1.1", features = ["tokio-sync"] }
 anyhow = "1.0.100"
 axum = { version = "0.8.8", features = ["http2"] }
 reqwest = "0.13.1"
