--- a/nasomail_client/Cargo.toml
+++ b/nasomail_client/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
 name = "nasomail_client"
 version = "0.1.0"
-authors = ["Anatnaso"]
+authors = ["Anatnaso <antondev@kuthy.com>"]
 edition = "2024"
 
 [dependencies]
 nasomail_shared = { path = "../nasomail_shared" }
 
-dioxus = { version = "0.7.1", features = [] }
+clap = { version = "4.5.57", features = ["derive"] }
+colored = "3.1.1"
+
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-
-[features]
-default = ["desktop"]
-web = ["dioxus/web"]
-desktop = ["dioxus/desktop"]
-mobile = ["dioxus/mobile"]
