--- a/nasomail_server/Cargo.toml
+++ b/nasomail_server/Cargo.toml
@@ -1,20 +1,26 @@
 [package]
 name = "nasomail_server"
 version = "0.1.1"
-authors = ["Anatnaso"]
+authors = ["Anatnaso <antondev@kuthy.com>"]
 edition = "2024"
 
 [dependencies]
 nasomail_shared = { path = "../nasomail_shared" }
 ctxguard = { version = "0.1.2", features = ["tokio-sync"] }
+
 anyhow = "1.0.101"
-axum = { version = "0.8.8", features = ["http2"] }
-reqwest = "0.13.1"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
-sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
 thiserror = "2.0.18"
+
 tokio = { version = "1.49.0", features = ["full"] }
+uuid = { version = "1.20.0", features = ["v4"] }
+
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
-uuid = { version = "1.20.0", features = ["v4"] }
+
+axum = { version = "0.8.8", features = ["http2"] }
+reqwest = "0.13.1"
+
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
