--- a/nasomail_shared/Cargo.toml
+++ b/nasomail_shared/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nasomail_shared"
 version = "0.1.0"
-authors = ["Anatnaso"]
+authors = ["Anatnaso <antondev@kuthy.com>"]
 edition = "2024"
 
 [dependencies]
