--- a/nasomail_client/Cargo.toml
+++ b/nasomail_client/Cargo.toml
@@ -10,5 +10,8 @@ nasomail_shared = { path = "../nasomail_shared" }
 clap = { version = "4.5.57", features = ["derive"] }
 colored = "3.1.1"
 
+tokio = { version = "1.49.0", features = ["full"] }
+reqwest = "0.13.1"
+
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
