--- a/nasomail_shared/Cargo.toml
+++ b/nasomail_shared/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Anatnaso <antondev@kuthy.com>"]
 edition = "2024"
 
 [dependencies]
+serde = { version = "1.0.228", features = ["derive"] }
