--- a/nasomail_client/Cargo.toml
+++ b/nasomail_client/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
 name = "nasomail_client"
-version = "1.1.0"
+version = "1.1.1"
 authors = ["Anatnaso <antondev@kuthy.com>"]
 edition = "2024"
 
 [dependencies]
 nasomail_shared = { path = "../nasomail_shared" }
 
-clap = { version = "4.5.57", features = ["derive"] }
-colored = "3.1.1"
+clap = { version = "4.5", features = ["derive"] }
+colored = "3"
 
-tokio = { version = "1.49.0", features = ["full"] }
+anyhow = "1"
+thiserror = "2"
+
+tokio = { version = "1", features = ["full"] }
 reqwest = "0.13.1"
 
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
-anyhow = "1.0.101"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
